Gridster setup, basic layout

--- a/src/renderer/views/content/template.html
+++ b/src/renderer/views/content/template.html
@@ -1,5 +1,8 @@
 <div class="contents container-fluid">
   <div class="row">
+    <components></components>
+    <app></app>
+    <properties></properties>
     Content
   </div>
 </div>
