Figuring out Vue.js system
Getiing there...

--- a/src/renderer/views/content/template.html
+++ b/src/renderer/views/content/template.html
@@ -3,6 +3,6 @@
     <components></components>
     <app></app>
     <properties></properties>
-    Content
+    Content LOLOLOLOLLOL
   </div>
 </div>
