--- a/src/renderer/views/content/style.less
+++ b/src/renderer/views/content/style.less
@@ -1,7 +1,7 @@
 @import "./../../../style/variables.less";
 
 .contents {
-  background-color: black;
+  background-color: lighten(gray, 50%);;
   height: 100%;
   padding-top: @top-bar-height;
   padding-bottom: @footer-bar-height;
