Working data pipeline to edit component properties

--- a/src/renderer/views/content/template.html
+++ b/src/renderer/views/content/template.html
@@ -2,7 +2,6 @@
   <div class="row">
     <components></components>
     <app></app>
-    <properties></properties>
-    Content LOLOLOLOLLOL
+    <properties component="{{selectedComp}}"></properties>
   </div>
 </div>
