--- a/src/renderer/views/content/style.less
+++ b/src/renderer/views/content/style.less
@@ -1,8 +1,8 @@
 @import "./../../../style/variables.less";
 
 .contents {
-  background-color: lighten(gray, 50%);;
-  height: 100%;
-  padding-top: @top-bar-height;
-  padding-bottom: @footer-bar-height;
+  // background-color: lighten(gray, 50%);;
+  // height: 100%;
+  // padding-top: @top-bar-height;
+  // padding-bottom: @footer-bar-height;
 }
