--- a/src/renderer/views/content/template.html
+++ b/src/renderer/views/content/template.html
@@ -1,5 +1,7 @@
-<div class="contents">
-  <components></components>
-  <app></app>
-  <properties component="{{selectedComp}}"></properties>
-</div>
+<main>
+  <div class="contents">
+    <components></components>
+    <app></app>
+    <properties component="{{selectedComp}}"></properties>
+  </div>
+</main>
