Make qr-code window work
Messy build setup though. Need to take another look at that later.

--- a/src/renderer/views/qr.html
+++ b/src/renderer/views/qr.html
@@ -11,13 +11,4 @@
   </body>
 </html>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script type="text/javascript" src="./../../../../Plugins/Qr-Code/qrcode_generator.js">
-
-</script>
-<script type="text/javascript" >
-window.jQuery = require("jquery");
-window.$ = require("jquery");
-  $("#qr").createQR("test")
-
-</script>
+<script type="text/javascript" src="../../qr.entry.js"></script>
