:arrow_up: Fully transition Vue to version ^1.0.0

--- a/src/renderer/views/content/template.html
+++ b/src/renderer/views/content/template.html
@@ -1,7 +1,7 @@
 <main>
   <div class="contents">
     <components></components>
-    <app></app>
-    <properties component="{{selectedComp}}"></properties>
+    <app-view></app-view>
+    <properties :component="selectedComp"></properties>
   </div>
 </main>
