switch statement for exporter.js

--- a/src/export/templates/button.html
+++ b/src/export/templates/button.html
@@ -1,3 +1,9 @@
+<!--This button template needs the following elements:
+      -width
+      -height
+      -name
+      -on_click_method
+-->
 <button class="btn" :style="{width: {{width}}+'%', height: {{height}}+'%'}"
         v-text="{{name}}"
         @click="{{on_click_method}}">
