Initial function output

--- a/src/export/templates/HTML/app_page.html
+++ b/src/export/templates/HTML/app_page.html
@@ -33,14 +33,20 @@
           {{/each}}
         },
         computed: {
-          computed_1: function() {
-            return this.component_2.properties.name.value + " and " + this.component_3.properties.name.value
-          }
+          {{#each logic.functions}}
+          {{@key}}: {{{this.js}}},
+          {{/each}}
+          // computed_1: function() {
+          //   return this.component_2.properties.name.value + " and " + this.component_3.properties.name.value
+          // }
         },
         methods: {
-          method_1: function() {
-            this.component_4.properties.name.value = this.computed_1
-          }
+          {{#each logic.methods}}
+          {{@key}}: {{{this.js}}},
+          {{/each}}
+          // method_1: function() {
+          //   this.component_4.properties.name.value = this.computed_1
+          // }
         },
       })
     </script>
