--- a/src/export/templates/HTML/app_page.html
+++ b/src/export/templates/HTML/app_page.html
@@ -17,6 +17,10 @@
         {{{this.html}}}
       </div>
       {{/each}}
+
+      {{#each logic.functions}}
+      <div hidden v-text="{{this.name}}"></div>
+      {{/each}}
     </app>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.16/vue.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
@@ -34,7 +38,7 @@
         },
         computed: {
           {{#each logic.functions}}
-          {{@key}}: {{{this.js}}},
+          {{this.name}}: {{{this.js}}},
           {{/each}}
           // computed_1: function() {
           //   return this.component_2.properties.name.value + " and " + this.component_3.properties.name.value
