--- a/src/export/templates/HTML/button.html
+++ b/src/export/templates/HTML/button.html
@@ -1,4 +1,4 @@
 <button class="btn" :style="{width: {{width}}+'%', height: {{height}}+'%'}"
         v-text="{{name}}"
-        @click="{{on_click_method}}">
+        @click="{{click}}">
 </button>
