functions are now under methods when they have triggers

--- a/src/export/templates/HTML/app_page.html
+++ b/src/export/templates/HTML/app_page.html
@@ -46,7 +46,7 @@
         },
         methods: {
           {{#each logic.methods}}
-          {{@key}}: {{{this.js}}},
+          {{@key}}: {{{this}}},
           {{/each}}
           // method_1: function() {
           //   this.component_4.properties.name.value = this.computed_1
