Styling + html cleanup

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -8,3 +8,9 @@ a.btn-flat.red {
   color: #f44336;
   background-color: rgba(0, 0, 0, 0) !important;
 }
+
+.view-header {
+  font-size: 1.8rem;
+  margin: 10px 0px 0px 15px;
+  color: #ee6e73;
+}
