--- a/src/renderer/views/content/style.less
+++ b/src/renderer/views/content/style.less
@@ -1,4 +1,4 @@
-@import "./../../../style/variables.less";
+@import "./../../../style/main.less";
 
 .contents {
   // background-color: lighten(gray, 50%);;
