Keep main view components alive during switches

--- a/src/renderer/views/content/template.html
+++ b/src/renderer/views/content/template.html
@@ -2,7 +2,7 @@
   <div class="contents">
     <components></components>
     <div class="content">
-      <component :is="page"></component>
+      <component :is="page" keep-alive></component>
     </div>
     <properties :component="state.app.components[state.selected]"></properties>
   </div>
